New endpoint for link preview
